Filled in website with content

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									Wstęp
 								</h3>
 								<p class="card-text">
-									Nazywam się Jonasz Kądziela i już od dawna pasjonuję się informatyką. Swoją przygodę z komputerami rozpocząłem od tworzenia prymitywnych gier 2D. Po wielu latach intensywnej nauki znacznie poszerzyłem swoje umiejętności, a miłość do informatyki pozostała.
+									Nazywam się Jonasz Kądziela, urodziłem się 11 czerwca 1999 r. Już od najmłodszych lat rozwiązywanie łamigłówek i majsterkowanie sprawiało mi ogromną przyjemność. W wieku 12 lat stworzyłem swoją pierwszą grę komputerową. Wtedy również podjąłem decyzję, że chcę związać swoją przyszłość z informatyką. Przez ostatnie lata, wytrwale dążę do swojego wymarzonego celu. 
 								</p>
 							</div>
 						</div>
@@ -139,8 +139,17 @@
 							<p class="card-text">
 								W wolnym czasie realizuję również wiele spontanicznych pomysłów związanych z informatyką. Stworzyłem między innymi aplikację do zabezpieczania folderu hasłem (w Qt C++) oraz zaprojektowałem i napisałem swoją stronę internetową (w HTML, CSS oraz JavaScript). Moją najnowszą inicjatywą jest zrealizowanie od podstaw serwera na bazie Raspberry Pi, który pełni wiele funkcji. Jest między innymi serwerem stron internetowych i serwerem plików. W tym celu wykorzystałem: Raspbian (odmiana Debiana), Apache, ProFTPD, MySQL, PHP, HTML, CSS oraz JavaScript.
 							</p>
-							<p class="card-text font-weight-bold">
-								Dziękuję bardzo za zapoznanie się z historią mojego życia. Mam nadzieję, że tekst nie zanudził Cię na śmierć :)
+							<h3 class="card-title mt-4">
+								Zakończenie
+							</h3>
+							<p class="card-text">
+								<span class="font-weight-bold">Z całego <i class="fas fa-heart text-highlight"></i> dziękuję za Twój czas poświęcony za bliższe poznanie mojej osoby.</span> Mam nadzieję, że nie zanudziłem Cię na śmierć! 😊
+							</p>
+							<p class="card-text">
+								Bardzo dynamicznie się rozwijam i tworzę wiele projektów, dlatego powyższy tekst może szybko okazać się nieaktualny. Jednak wierzę, że pomimo tego zawsze będzie przyjemną lekturą i zachęci wiele osób do wytrwałości w dążeniu do swoich wymarzonych celów.
+							</p>
+							<p class="card-text font-italic text-muted">
+								Ostatnia aktualizacja: 11 czerwca 2018 r.
 							</p>
 						</div>
 					</div>
@@ -164,10 +173,7 @@
 									Elon Musk
 								</h3>
 								<p class="card-text">
-									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
-								</p>
-								<p class="card-text">
-									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+									Autor wielu przełomowych wynalazków, założyciel najbardziej innowacyjnych firm, m.in.: PayPal, Tesla, SpaceX, The Boring Company. Marzy o tym, by umrzeć na Marsie, na którego poleci rakietą stworzoną przez swoją własną firmę - SpaceX. 
 								</p>
 							</div>
 						</div>
@@ -175,10 +181,13 @@
 					<div id="about-elon-musk-collapse" class="collapse card-collapse">
 						<div class="card-body">
 							<p class="card-text">
-								Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								Naukę w szkole podstawowej rozpoczął rok wcześniej. Był znakomitym uczniem, dlatego w wieku 10 lat firma IBM sprawdziła, czy nadaje się na programistę. Okazało się, że był najwybitniejszy spośród wszystkich kandydatów.
 							</p>
 							<p class="card-text">
-								Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								Wtedy rodzice zapisali Elona na dodatkowe zajęcia z programowania, jednak szybko stało się oczywistym, że Musk jest znacznie lepszy od nauczyciela prowadzącego lekcje.
+							</p>
+							<p class="card-text">
+								W wieku 12 lat stworzył swoją pierwszą grę komputerową o nazwie Blastar, którą następnie sprzedał magazynowi o grach komputerowych za 500 $. Właściciele gazety, kupując grę nie mieli pojęcia, że została ona napisana przez dwunastolatka.
 							</p>
 						</div>
 					</div>
@@ -197,10 +206,7 @@
 									Falco Girgis
 								</h3>
 								<p class="card-text">
-									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
-								</p>
-								<p class="card-text">
-									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+									Twórca rewolucyjnej gry 2D, bazującej na autorskim silniku napisanym m.in. w: Assembly, C++ i OpenGL. Założyciel i główny programista w firmie o takiej samej nazwie jak tytuł gry - Elysian Shadows. Aktualnie starszy inżynier oprogramowania w zespole odpowiedzialnym za sterowniki DirectX12 w firmie AMD.
 								</p>
 							</div>
 						</div>
@@ -208,10 +214,13 @@
 					<div id="about-falco-girgis-collapse" class="collapse card-collapse">
 						<div class="card-body">
 							<p class="card-text">
-								Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								Poświęcił większość swojego życia na programowanie gier komputerowych. W wieku 13 lat napisał swoją pierwszą grę 2D na konsolę Sega Dreamcast. Wykorzystał w tym celu jeden z najtrudniejszych języków programowania - Assembly.
 							</p>
 							<p class="card-text">
-								Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								Prace nad Elysian Shadows rozpoczęły się już w 2007 roku. Na początku był to mały, hobbystyczny projekt tworzony w domowym zaciszu przez Falco, jego brata i kilku kolegów ze szkoły. Jednak z czasem gra została znacznie rozbudowana i przerodziła się w produkt najwyższej klasy. Projekt stał się jego główną ambicją w życiu.
+							</p>
+							<p class="card-text">
+								Po wielu latach programowania w domowym zaciszu, Falco poprosił swoich fanów o pomoc finansową, która pozwoliłaby mu rzucić swoją pracę na etacie i całkowicie oddać się tworzeniu Elysian Shadows. 2282 osoby zasiliły jego konto kwotą 185322 $ za pośrednictwem platformy Kickstarter.
 							</p>
 						</div>
 					</div>
@@ -230,10 +239,7 @@
 									Karl Wimble
 								</h3>
 								<p class="card-text">
-									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
-								</p>
-								<p class="card-text">
-									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+									Niezależny twórca gier komputerowych, który niedawno skończył studia. Swoją przygodę z tworzeniem gier rozpoczął od bardzo ambitnego projektu - gry 3D MMORPG o nazwie Socuwan. Na początku, Karl był bardzo niedoświadczonym programistą, jednak podczas pracy nad swoją pierwszą grą zrobił niezwykłe postępy.
 								</p>
 							</div>
 						</div>
@@ -241,10 +247,13 @@
 					<div id="about-karl-wimble-collapse" class="collapse card-collapse">
 						<div class="card-body">
 							<p class="card-text">
-								Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								Po kilku latach ciężkiej i bardzo sumiennej pracy nad grą, Karl zdał sobie sprawę, że aby dokończyć projekt i opłacić serwery gry, będzie potrzebował wsparcia finansowego swoich fanów.
 							</p>
 							<p class="card-text">
-								Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								Podczas 30-dniowej zbiórki 191 osób wpłaciło 9531 €. Niestety, była to kwota niewystarczająca na dokończenie ambitnego projektu, dlatego Karl zwrócił wszystkie wpłacone pieniądze i rozpoczął prace nad kolejnym projektem.
+							</p>
+							<p class="card-text">
+								Nowa gra nosi nazwę Equilinox. Pierwotnie miała być wydana w niespełna rok, jednak tak bardzo się rozwinęła, że planowany termin znacznie się przedłużył. Stała się jeszcze ambitniejszym projektem od Socuwan.
 							</p>
 						</div>
 					</div>
@@ -263,10 +272,7 @@
 									Steve Jobs
 								</h3>
 								<p class="card-text">
-									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
-								</p>
-								<p class="card-text">
-									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+									Założyciel technologicznego giganta – firmy Apple. Po tym jak został zmuszony opuścić swoje własne przedsiębiorstwo, założył konkurencyjną spółkę o nazwie NeXT. Były prezes i główny inwestor znanego oraz lubianego na całym świecie studia filmowego Pixar.
 								</p>
 							</div>
 						</div>
@@ -274,10 +280,16 @@
 					<div id="about-steve-jobs-collapse" class="collapse card-collapse">
 						<div class="card-body">
 							<p class="card-text">
-								Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								Był jednym z największych wizjonerów w historii nowych technologii. Wymyślał produkty, o których ludzie nawet nigdy nie śnili, jednak jak się później okazywało, stały się one nieodłącznym elementem ich życia. Był perfekcjonistą, bardzo dbał o estetykę swoich urządzeń oraz przywiązywał wagę do najdrobniejszych szczegółów.
 							</p>
 							<p class="card-text">
-								Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								Po odejściu Jobsa z firmy, Apple kompletnie zaczęło wprowadzać na rynek nieatrakcyjne produkty, których nikt nie chciał kupować.
+							</p>
+							<p class="card-text">
+								Kilkanaście lat później zarząd firmy Apple zdał sobie sprawę, że firma bez Jobsa straciła swoją markę i renomę nie będąc w stanie wyznaczać trendów w świecie nowych technologii. W chwili, gdy Steve Jobs ponownie zasiadł na fotelu prezesa firma Apple była w kiepskiej sytuacji finansowej. Niektórzy eksperci wróżyli jej wręcz nieunikniony upadek.
+							</p>
+							<p class="card-text">
+								Jednak wtedy za sprawą Jobsa pojawił się iMac - pierwszy z serii komputerów Apple, w oparciu o który zbudowano legendę firmy. Kolejne przełomowe pomysły Jobsa przyniosły firmie fortunę, m.in.: iPod, iTunes Store, iPhone i iPad.
 							</p>
 						</div>
 					</div>
@@ -296,10 +308,7 @@
 									Bracia Gower
 								</h3>
 								<p class="card-text">
-									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
-								</p>
-								<p class="card-text">
-									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+									Trzej bracia, którzy wspólnie stworzyli najpopularniejszą grę przeglądarkową o nazwie Runescape. Założyciele popularnego studia gier komputerowych - Jagex. Od najmłodszych lat uwielbiali grać w gry planszowe i komputerowe.
 								</p>
 							</div>
 						</div>
@@ -307,10 +316,19 @@
 					<div id="about-gower-brothers-collapse" class="collapse card-collapse">
 						<div class="card-body">
 							<p class="card-text">
-								Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								Pierwsza wersja Runescape została wydana w 2001 roku. Projekt od razu odniósł ogromny sukces, co wiązało się to ze stale rosnącą ilością graczy. Jednakże, dotychczasowa forma zarobku, czyli reklamy pojawiające się na ich stronie internetowej, okazała się niewystarczająca na pokrycie kosztów utrzymania serwerów gry.
 							</p>
 							<p class="card-text">
-								Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								Bracia nie mogli sobie pozwolić na dokładanie z własnych pieniędzy do comiesięcznych opłat za serwery. Dlatego musieli podjąć bardzo trudną decyzję: mogli zakończyć projekt lub zdecydować się na wprowadzenie płatnej wersji gry.
+							</p>
+							<p class="card-text">
+								Wspólnie uznali, że z pewnością nie chcą porzucać projektu, gdyż miał on ogromny potencjał i włożyli w niego ogromną ilość pracy. Dlatego w celu minimalizacji wydatków przeprowadzili się z powrotem do ich rodzinnego domu. Ich nowe „biuro” powstało poprzez podzielenie kurtyną kuchni rodziców na dwie połowy.
+							</p>
+							<p class="card-text">
+								W wyniku tego, po 6 miesiącach ciężkiej pracy, stworzyli nową, unowocześnioną i znacznie rozbudowaną wersję gry. W dalszym ciągu była ona darmowa, lecz część gry dostępna była dla użytkowników, po opłaceniu comiesięcznej subskrypcji. W ten sposób rozwiązali problem finansowy.
+							</p>
+							<p class="card-text">
+								Na przestrzeni kilkunastu lat, Runescape podlegał wielu modyfikacjom i zmienił się nie do poznania. Aktualnie pobił 6 rekordów Guinnessa i posiada 262 miliony kont użytkowników.
 							</p>
 						</div>
 					</div>
@@ -824,7 +842,7 @@
 						<div class="card card--cta card--more">
 							<div class="card-body">
 								<p class="card-text">
-									Jeśli tak, to zachęcam Cię do poznania mnie od strony profesjonalnej.
+									Jeśli tak, to zachęcam Cię do poznania mnie od strony zawodowej.
 								</p>
 								<p class="card-text">
 									Dowiedz się, nad czym pracuję na co dzień.
