--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								Zakończenie
 							</h3>
 							<p class="card-text">
-								<span class="font-weight-bold">Z całego <i class="fas fa-heart text-highlight"></i> dziękuję za Twój czas poświęcony za bliższe poznanie mojej osoby.</span> Mam nadzieję, że nie zanudziłem Cię na śmierć! 😊
+								<span class="font-weight-bold">Z całego <i class="fas fa-heart text-highlight"></i> dziękuję za Twój czas poświęcony na bliższe poznanie mojej osoby.</span> Mam nadzieję, że nie zanudziłem Cię na śmierć! 😊
 							</p>
 							<p class="card-text">
 								Bardzo dynamicznie się rozwijam i tworzę wiele projektów, dlatego powyższy tekst może szybko okazać się nieaktualny. Jednak wierzę, że pomimo tego zawsze będzie przyjemną lekturą i zachęci wiele osób do wytrwałości w dążeniu do swoich wymarzonych celów.
@@ -341,8 +341,8 @@
 		<section id="hobbies" class="section">
 			<div class="container">
 				<h1 class="section-title">Moje hobby</h1>
-				<div class="row">
-					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
+				<div class="row justify-content-center">
+					<div class="col-sm-6 col-lg-3 card--hobby">
 						<div class="card card-with-icon">
 							<div class="card-body d-flex flex-column justify-content-center">
 								<div class="card-icon">
@@ -354,7 +354,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
+					<div class="col-sm-6 col-lg-3 card--hobby">
 						<div class="card card-with-icon">
 							<div class="card-body d-flex flex-column justify-content-center">
 								<div class="card-icon">
@@ -366,7 +366,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
+					<div class="col-sm-6 col-lg-3 card--hobby">
 						<div class="card card-with-icon">
 							<div class="card-body d-flex flex-column justify-content-center">
 								<div class="card-icon">
@@ -378,7 +378,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
+					<div class="col-sm-6 col-lg-3 card--hobby">
 						<div class="card card-with-icon">
 							<div class="card-body d-flex flex-column justify-content-center">
 								<div class="card-icon">
